--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1342,268 +1342,116 @@
  PRS_GER_bismarck_imperial_DEF:0 "The German Empire"
  PRS_GER_bismarck_imperial_ADJ:0 "German"
 
- GDC_british_reformism:0 "British Gold Coast"
- GDC_british_traditionalism:0 "British Gold Coast"
- GDC_british_imperialism:0 "British Gold Coast"
- GDC_british_fundamentalism:0 "Gold Coast"
- GDC_british_reformism_DEF:0 "British Gold Coast"
- GDC_british_traditionalism_DEF:0 "British Gold Coast"
- GDC_british_imperialism_DEF:0 "British Gold Coast"
- GDC_british_fundamentalism_DEF:0 "Gold Coast"
- GDC_british_reformism_ADJ:0 "Gold Coast"
- GDC_british_traditionalism_ADJ:0 "Gold Coast"
- GDC_british_fundamentalism_ADJ:0 "Gold Coast"
+ GDC_british_:0 "British Gold Coast"
+ GDC_british_DEF:0 "The British Gold Coast"
+ GDC_british_ADJ:0 "Gold Coast"
 
- GDC_dutch_reformism:0 "Dutch Gold Coast"
- GDC_dutch_traditionalism:0 "Dutch Gold Coast"
- GDC_dutch_imperialism:0 "Dutch Gold Coast"
- GDC_dutch_imperialism:0 "Gold Coast State"
- GDC_dutch_fundamentalism:0 "Gold Coast"
- GDC_dutch_reformism_DEF:0 "Dutch Gold Coast"
- GDC_dutch_traditionalism_DEF:0 "Dutch Gold Coast"
- GDC_dutch_imperialism_DEF:0 "Dutch Gold Coast"
- GDC_dutch_fundamentalism_DEF:0 "Gold Coast"
- GDC_dutch_reformism_ADJ:0 "Gold Coast"
- GDC_dutch_traditionalism_ADJ:0 "Gold Coast"
- GDC_dutch_imperialism_ADJ:0 "Gold Coast"
- GDC_dutch_fundamentalism_ADJ:0 "Gold Coast"
 
- TRV_ENG_dominated_reformism:0 "Transvaal"
- TRV_ENG_dominated_traditionalism:0 "Transvaal"
- TRV_ENG_dominated_imperialism:0 "Transvaal"
- TRV_ENG_dominated_imperialism:0 "Transvaal"
- TRV_ENG_dominated_fundamentalism:0 "Transvaal"
- TRV_ENG_dominated_reformism_DEF:0 "The Transvaal"
- TRV_ENG_dominated_traditionalism_DEF:0 "The Transvaal"
- TRV_ENG_dominated_imperialism_DEF:0 "The Transvaal"
- TRV_ENG_dominated_imperialism_DEF:0 "The Transvaal"
- TRV_ENG_dominated_fundamentalism_DEF:0 "The Transvaal"
- TRV_ENG_dominated_reformism_ADJ:0 "Transvaal"
- TRV_ENG_dominated_traditionalism_ADJ:0 "Transvaal"
- TRV_ENG_dominated_imperialism_ADJ:0 "Transvaal"
- TRV_ENG_dominated_imperialism_ADJ:0 "Transvaal"
- TRV_ENG_dominated_fundamentalism_ADJ:0 "Transvaal"
+ GDC_dutch:0 "Dutch Gold Coast"
+ GDC_dutch_DEF:0 "The Dutch Gold Coast"
+ GDC_dutch_ADJ:0 "Gold Coast"
+ 
+ TRV_ENG_dominated:0 "Transvaal"
+ TRV_ENG_dominated_DEF:0 "The Transvaal"
+ TRV_ENG_dominated_ADJ:0 "Transvaal"
+ 
 
- TRV_ENG_fundamentalism:0 "Transvaal Colony"
- TRV_ENG_fundamentalism_DEF:0 "The Transvaal Colony"
- TRV_ENG_fundamentalism_ADJ:0 "Transvaal Colony"
+ TRV_ENG:0 "Transvaal Colony"
+ TRV_ENG_DEF:0 "The Transvaal Colony"
+ TRV_ENG_ADJ:0 "Transvaal Colony"
 
- LIB_maryland_imperialism:0 "Reorganized Maryland Free State"
- LIB_maryland_imperialism_DEF:0 "Reorganized Maryland Free State"
- LIB_maryland_reformism:0 "Independant State of Maryland"
- LIB_maryland_reformism_DEF:0 "Independant State of Maryland"
- LIB_maryland_imperialism_ADJ:0 "Marylander"
- LIB_maryland_reformism_ADJ:0 "Marylander"
+ LIB_maryland:0 "Reorganized Maryland Free State"
+ LIB_maryland_DEF:0 "The Reorganized Maryland Free State"
+ LIB_maryland_ADJ:0 "Marylander"
 
  LIB_colony_usa:0 "American West Africa"
- LIB_colony_usa_DEF:0 "American West Africa"
+ LIB_colony_usa_DEF:0 "The American West Africa"
  LIB_colony_usa_ADJ:0 "American West Africa"
 
- KRU_republic_reformism:0 "Kru Republic"
- KRU_republic_traditionalism:0 "Kru Republic"
- KRU_republic_imperialism:0 "Kru Kingdom"
- KRU_republic_imperialism:0 "Reorganized Kru Free State"
- KRU_republic_fundamentalism:0 "Kru"
- KRU_republic_reformism_DEF:0 "Kru Republic"
- KRU_republic_traditionalism_DEF:0 "Kru Republic"
- KRU_republic_imperialism_DEF:0 "Reorganized Kru Free State"
- KRU_republic_fundamentalism_DEF:0 "Kru"
- KRU_republic_reformism_ADJ:0 "Kru"
- KRU_republic_traditionalism_ADJ:0 "Kru"
- KRU_republic_imperialism_ADJ:0 "Kru"
- KRU_republic_fundamentalism_ADJ:0 "Kru"
+ KRU_republic:0 "Kru Republic"
+ KRU_republic_DEF:0 "The Kru Republic"
+ KRU_republic_ADJ:0 "Kru"
 
- KRU_maryland_reformism:0 "Republic of Maryland"
- KRU_maryland_traditionalism:0 "Republic of Maryland"
- KRU_maryland_imperialism:0 "Kingdom of Maryland"
- KRU_maryland_fundamentalism:0 "Maryland"
- KRU_maryland_reformism_DEF:0 "Republic of Maryland"
- KRU_maryland_traditionalism_DEF:0 "Republic of Maryland"
- KRU_maryland_imperialism_DEF:0 "Kingdom of Maryland"
- KRU_maryland_imperialism_DEF:0 "Reorganized Maryland Free State"
- KRU_maryland_fundamentalism_DEF:0 "Maryland"
- KRU_maryland_reformism_ADJ:0 "Marylander"
- KRU_maryland_traditionalism_ADJ:0 "Marylander"
- KRU_maryland_imperialism_ADJ:0 "Marylander"
- KRU_maryland_imperialism_ADJ:0 "Marylander"
- KRU_maryland_fundamentalism_ADJ:0 "Marylander"
 
- ETH_British_Trade_Company_reformism:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_traditionalism:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_imperialism:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_fundamentalism:0 "Ethiopian Union"
- ETH_British_Trade_Company_reformism_DEF:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_traditionalism_DEF:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_imperialism_DEF:0 "Ethiopian Trade Company"
- ETH_British_Trade_Company_fundamentalism_DEF:0 "Ethiopian Union"
- ETH_British_Trade_Company_reformism_ADJ:0 "Ethiopian"
- ETH_British_Trade_Company_traditionalism_ADJ:0 "Ethiopian"
- ETH_British_Trade_Company_imperialism_ADJ:0 "Ethiopian"
- ETH_British_Trade_Company_fundamentalism_ADJ:0 "Ethiopian"
+ KRU_maryland:0 "Republic of Maryland"
+ KRU_maryland_DEF:0 "The Republic of Maryland"
+ KRU_maryland_ADJ:0 "Marylander"
+ 
 
- ETH_German_Trade_Company_reformism:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_traditionalism:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_imperialism:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_fundamentalism:0 "Coptic Ethiopian Union"
- ETH_German_Trade_Company_reformism_DEF:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_traditionalism_DEF:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_imperialism_DEF:0 "Ethiopian Trade Gilde"
- ETH_German_Trade_Company_fundamentalism_DEF:0 "Ethiopian Union"
- ETH_German_Trade_Company_reformism_ADJ:0 "Ethiopian"
- ETH_German_Trade_Company_traditionalism_ADJ:0 "Ethiopian"
- ETH_German_Trade_Company_imperialism_ADJ:0 "Ethiopian"
- ETH_German_Trade_Company_fundamentalism_ADJ:0 "Ethiopian"
+ ETH_British_Trade_Company:0 "Ethiopian Trade Company"
+ ETH_British_Trade_Company_DEF:0 "The Ethiopian Trade Company"
+ ETH_British_Trade_Company_ADJ:0 "Ethiopian"
 
- ETH_Portugal_Trade_Company_reformism:0 "Ethiopian Trade Companhia"
- ETH_Portugal_Trade_Company_traditionalism:0 "Ethiopian Trade Companhia"
- ETH_Portugal_Trade_Company_imperialism:0 "Ethiopian Trade Companhia"
- ETH_Portugal_Trade_Company_fundamentalism:0 "Coptic Ethiopian Uniao"
- ETH_Portugal_Trade_Company_reformism_DEF:0 "Ethiopian Trade Companhia"
- ETH_Portugaln_Trade_Company_traditionalism_DEF:0 "Ethiopian Trade Companhia"
- ETH_Portugal_Trade_Company_imperialism_DEF:0 "Ethiopian Trade Companhia"
- ETH_Portugal_Trade_Company_fundamentalism_DEF:0 "Ethiopian Uniao"
- ETH_Portugal_Trade_Company_reformism_ADJ:0 "Ethiopian"
- ETH_Portugal_Trade_Company_traditionalism_ADJ:0 "Ethiopian"
- ETH_Portugal_Trade_Company_imperialism_ADJ:0 "Ethiopian"
- ETH_Portugal_Trade_Company_fundamentalism_ADJ:0 "Ethiopian"
+ ETH_German_Trade_Company:0 "Ethiopian Trade Gilde"
+ ETH_German_Trade_Company_DEF:0 "The Ethiopian Trade Gilde"
+ ETH_German_Trade_Company_ADJ:0 "Ethiopian"
+ 
+ ETH_Portugal_Trade_Company:0 "Ethiopian Trade Companhia"
+ ETH_Portugal_Trade_Company_DEF:0 "The Ethiopian Trade Companhia"
+ ETH_Portugal_Trade_Company_ADJ:0 "Ethiopian"
+ 
 
- ETH_Inwards_reformism:0 "Abyssinia"
- ETH_Inwards_traditionalism:0 "Abyssinia"
- ETH_Inwards_imperialism:0 "Abyssinia"
- ETH_Inwards_imperialism:0 "Abyssinia"
- ETH_Inwards_fundamentalism:0 "Coptic Abyssinian State"
- ETH_Inwards_reformism_DEF:0 "Abyssinia"
- ETH_Inwards_traditionalism_DEF:0 "Abyssinia"
- ETH_Inwards_imperialism_DEF:0 "Abyssinia"
- ETH_Inwards_imperialism_DEF:0 "Abyssinia"
- ETH_Inwards_fundamentalism_DEF:0 "Coptic Abyssinian State"
- ETH_Inwards_reformism_ADJ:0 "Abyssinian"
- ETH_Inwards_traditionalism_ADJ:0 "Abyssinian"
- ETH_Inwards_imperialism_ADJ:0 "Abyssinian"
- ETH_Inwards_imperialism_ADJ:0 "Abyssinian"
- ETH_Inwards_fundamentalism_ADJ:0 "Abyssinian"
+ ETH_Inwards:0 "Abyssinia"
+ ETH_Inwards_DEF:0 "The Abyssinia"
+ ETH_Inwards_ADJ:0 "Abyssinian"
+ 
 
  ETH_Islamic_reformism:0 "Abyssinia"
- ETH_Islamic_traditionalism:0 "Abyssinia"
- ETH_Islamic_imperialism:0 "Abyssinia"
- ETH_Islamic_imperialism:0 "Abyssinia"
- ETH_Islamic_fundamentalism:0 "Abyssinian Caliphate"
- ETH_Islamic_reformism_DEF:0 "Abyssinia"
- ETH_Islamic_traditionalism_DEF:0 "Abyssinia"
- ETH_Islamic_imperialism_DEF:0 "Abyssinia"
- ETH_Islamic_imperialism_DEF:0 "Abyssinia"
- ETH_Islamic_fundamentalism_DEF:0 "Abyssinian Caliphate"
- ETH_Islamic_reformism_ADJ:0 "Abyssinian"
- ETH_Islamic_traditionalism_ADJ:0 "Abyssinian"
- ETH_Islamic_imperialism_ADJ:0 "Abyssinian"
- ETH_Islamic_imperialism_ADJ:0 "Abyssinian"
- ETH_Islamic_fundamentalism_ADJ:0 "Abyssinian"
+ ETH_Islamic_DEF:0 "The Abyssinia"
+ ETH_Islamic_ADJ:0 "Abyssinian"
+ 
 
- ETH_Formed_reformism:0 "Ethiopia"
- ETH_Formed_traditionalism:0 "Ethiopia"
- ETH_Formed_imperialism:0 "Ethiopia"
- ETH_Formed_imperialism:0 "Ethiopia"
- ETH_Formed_fundamentalism:0 "Coptic Ethiopian State"
- ETH_Formed_reformism_DEF:0 "Ethiopia"
- ETH_Formed_traditionalism_DEF:0 "Ethiopia"
- ETH_Formed_imperialism_DEF:0 "Ethiopia"
- ETH_Formed_imperialism_DEF:0 "Ethiopia"
- ETH_Formed_fundamentalism_DEF:0 "Coptic Ethiopian State"
- ETH_Formed_reformism_ADJ:0 "Ethiopian"
- ETH_Formed_traditionalism_ADJ:0 "Ethiopian"
- ETH_Formed_imperialism_ADJ:0 "Ethiopian"
- ETH_Formed_imperialism_ADJ:0 "Ethiopian"
- ETH_Formed_fundamentalism_ADJ:0 "Ethiopian"
+ ETH_Formed:0 "Ethiopia"
+ ETH_Formed_DEF:0 "The Ethiopia"
+ ETH_Formed_ADJ:0 "Ethiopian"
+ 
 
  EGY_autonomy_eyalet:0 "Egyptian Eyalet"
  EGY_autonomy_eyalet_DEF:0 "Egypt"
  EGY_autonomy_ottoman_khedive:0 "Egyptian Khedivate"
  EGY_autonomy_ottoman_khedive_DEF:0 "Egypt"
 
- EGY_mahdist_insurgency_fundamentalism:0 "Mahdist Insurgancy"
- EGY_mahdist_insurgency_fundamentalism_ADJ:0 "Sudanese"
- EGY_mahdist_insurgency_fundamentalism_DEF:0 "Sudan"
+ EGY_mahdist_insurgency:0 "Mahdist Insurgancy"
+ EGY_mahdist_insurgency_ADJ:0 "The Sudanese"
+ EGY_mahdist_insurgency_DEF:0 "Sudan"
 
- EGY_mahdist_state_fundamentalism:0 "Mahdist State"
- EGY_mahdist_state_fundamentalism_ADJ:0 "Sudanese"
- EGY_mahdist_state_fundamentalism_DEF:0 "Sudan"
+ EGY_mahdist_state:0 "Mahdist State"
+ EGY_mahdist_state_ADJ:0 "The Sudanese"
+ EGY_mahdist_state_DEF:0 "Sudan"
 
  ORO_south_eritrea_oromo_tribe:0 "Eritrean-Oromo Revolt"
- ORO_south_eritrea_oromo_tribe_ADJ:0 "Oromo"
+ ORO_south_eritrea_oromo_tribe_ADJ:0 "The Oromo"
  ORO_south_eritrea_oromo_tribe_DEF:0 "Oromo"
 
  ORO_gedaref_oromo_tribe:0 "Gedaref-Oromo Revolt"
- ORO_gedaref_oromo_tribe_ADJ:0 "Oromo"
+ ORO_gedaref_oromo_tribe_ADJ:0 "The Oromo"
  ORO_gedaref_oromo_tribe_DEF:0 "Oromo"
 
  HJZ_autonomy_eyalet:0 "Habesh Eyalet"
 
- ZAI_IAG_reformism:0 "International Association of the Congo"
- ZAI_IAG_traditionalism:0 "International Association of the Congo""
- ZAI_IAG_imperialism:0 "International Association of the Congo"
- ZAI_IAG_imperialism:0 "International Association of the Congo"
- ZAI_IAG_fundamentalism:0 "International Association of the Congo"
- ZAI_IAG_reformism_DEF:0 "International Association of the Congo"
- ZAI_IAG_traditionalism_DEF:0 "International Association of the Congo"
- ZAI_IAG_imperialism_DEF:0 "International Association of the Congo"
- ZAI_IAG_imperialism_DEF:0 "International Association of the Congo"
- ZAI_IAG_fundamentalism_DEF:0 "International Association of the Congo"
- ZAI_IAG_reformism_ADJ:0 "International Association of the Congo"
- ZAI_IAG_traditionalism_ADJ:0 "International Association of the Congo"
- ZAI_IAG_imperialism_ADJ:0 "International Association of the Congo"
- ZAI_IAG_imperialism_ADJ:0 "International Association of the Congo"
- ZAI_IAG_fundamentalism_ADJ:0 "International Association of the Congo"
+ ZAI_IAG:0 "International Association of the Congo"
+ ZAI_IAG_DEF:0 "The International Association of the Congo"
+ ZAI_IAG_ADJ:0 "International Association of the Congo"
+ 
 
- ZAI_CFS_reformism:0 "Congo Free State"
- ZAI_CFS_traditionalism:0 "Congo Free State"
- ZAI_CFS_fundamentalism:0 "Congo Free State"
- ZAI_CFS_imperialism:0 "Congo Free State"
- ZAI_CFS_reformism_DEF:0 "Congo Free State"
- ZAI_CFS_traditionalism_DEF:0 "Congo Free State"
- ZAI_CFS_imperialism_DEF:0 "Congo Free State"
- ZAI_CFS_fundamentalism_DEF:0 "Congo Free State"
- ZAI_CFS_reformism_ADJ:0 "Congo"
- ZAI_CFS_traditionalism_ADJ:0 "Congo"
- ZAI_CFS_fundamentalism_ADJ:0 "Congo"
+ ZAI_CFS:0 "Congo Free State"
+ ZAI_CFS_DEF:0 "The Congo Free State"
+ ZAI_CFS_ADJ:0 "Congo"
+ 
+ ZAI_DRC:0 "Democratic Republic of the Congo"
+ ZAI_DRC_DEF:0 "The Democratic Republic of the Congo"
+ ZAI_DRC_ADJ:0 "Democratic Republic of the Congo"
+ 
 
- ZAI_DRC_reformism:0 "Democratic Republic of the Congo"
- ZAI_DRC_traditionalism:0 "Democratic Republic of the Congo"
- ZAI_DRC_imperialism:0 "Democratic Republic of the Congo"
- ZAI_DRC_fundamentalism:0 "Democratic Republic of the Congo"
- ZAI_DRC_reformism_DEF:0 "Democratic Republic of the Congo"
- ZAI_DRC_traditionalism_DEF:0 "Democratic Republic of the Congo"
- ZAI_DRC_imperialism_DEF:0 "Democratic Republic of the Congo"
- ZAI_DRC_fundamentalism_DEF:0 "Democratic Republic of the Congo"
- ZAI_DRC_reformism_ADJ:0 "Democratic Republic of the Congo"
- ZAI_DRC_traditionalism_ADJ:0 "Democratic Republic of the Congo"
- ZAI_DRC_imperialism_ADJ:0 "Democratic Republic of the Congo"
- ZAI_DRC_fundamentalism_ADJ:0 "Democratic Republic of the Congo"
+ TAN_united_omani:0 "Omani Tanzania"
+ TAN_united_omani_DEF:0 "The Omani Tanzania"
+ TAN_united_omani_ADJ:0 "Omani Tanzania"
+ 
 
- TAN_united_omani_reformism:0 "Omani Tanzania"
- TAN_united_omani_traditionalism:0 "Omani Tanzania"
- TAN_united_omani_imperialism:0 "Omani Tanzania"
- TAN_united_omani_fundamentalism:0 "Omani Tanzania"
- TAN_united_omani_reformism_DEF:0 "Omani Tanzania"
- TAN_united_omani_traditionalism_DEF:0 "Omani Tanzania"
- TAN_united_omani_imperialism_DEF:0 "Omani Tanzania"
- TAN_united_omani_fundamentalism_DEF:0 "Omani Tanzania"
- TAN_united_omani_reformism_ADJ:0 "Omani Tanzania"
- TAN_united_omani_traditionalism_ADJ:0 "Omani Tanzania"
- TAN_united_omani_imperialism_ADJ:0 "Omani Tanzania"
- TAN_united_omani_fundamentalism_ADJ:0 "Omani Tanzania"
-
- ALB_prizren_reformism:0 "Prizren League"
- ALB_prizren_traditionalism:0 "Prizren League"
- ALB_prizren_imperialism:0 "Prizren League"
- ALB_prizren_fundamentalism:0 "Prizren League"
- ALB_prizren_reformism_DEF:0 "Prizren League"
- ALB_prizren_traditionalism_DEF:0 "Prizren League"
- ALB_prizren_imperialism_DEF:0 "Prizren League"
- ALB_prizren_fundamentalism_DEF:0 "Prizren League"
- ALB_prizren_reformism_ADJ:0 "Albanian"
- ALB_prizren_traditionalism_ADJ:0 "Albanian"
- ALB_prizren_imperialism_ADJ:0 "Albanian"
- ALB_prizren_fundamentalism_ADJ:0 "Albanian"
+ ALB_prizren:0 "Prizren League"
+ ALB_prizren_DEF:0 "The Prizren League"
+ ALB_prizren_ADJ:0 "Albanian"
+ 
 
  LIB_redland:0 "Redland"
  LIB_united_states_of_america:0 "United States of West Africa"
