--- a/localisation/english/politics_l_english.yml
+++ b/localisation/english/politics_l_english.yml
@@ -69,13 +69,13 @@
  POLITICS_EXPIRE_TIME:0 "Expires after: $TIME|Y$ days."
  POLITICS_SUCCESS_PROGRESS:0 "Goal success at: $PROGRESS|Y%0$"
  POLITICAL_POLITICAL:0 "Political"
- MANAGE_OCCUPIED_TERRITORIES:2 "Occupied territories"
- MANAGE_SUBJECTS:0 "Manage subjects"
+ MANAGE_OCCUPIED_TERRITORIES:2 "Occupations"
+ MANAGE_SUBJECTS:0 "Subjects"
  manage_occupied_territories_no_occupation:0 "§RYou are not occupying any non-core territory at the moment.§!"
  MANAGE_OCCUPIED_TERRITORIES_HEADER:0 "Foreign Territory"
  MANAGE_EXILED_GOVERNMENTS:0 "Exiled Governments"
  SHOW_EXILED_STATUS:0 "Exiled Status"
- SHOW_COLLABORATIONS:0 "Collaborations"
+ SHOW_COLLABORATIONS:0 "Partnerships"
  SHOW_EXILED_COLLABORATORS:0 "Exiled/Collaborators"
  POLITICAL_RESEARCH_BONUS_ENTRY:2 "$CATEGORY$: $FACTOR|=+0%$"
  POLITICAL_EQUIPMENT_TYPE_BONUS_ENTRY:0 "$ARCHETYPE$:"
