--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -628,32 +628,32 @@
  STATE_627:0 "Baka"
  STATE_628:0 "Beti"
  STATE_629:0 "Ewondo"
- STATE_630:0 "Johnston Atoll"
- STATE_631:0 "Midway Island"
- STATE_632:0 "Wake Island"
- STATE_633:0 "Marshall Islands"
- STATE_634:0 "Solomon Islands"
- STATE_635:0 "New Caledonia"
- STATE_636:0 "Fiji"
- STATE_637:0 "Kamchatka"
- STATE_638:0 "Guam"
- STATE_639:0 "Gilbert Islands"
- STATE_640:0 "Mandalay"
- STATE_641:0 "Tahiti"
- STATE_642:0 "Phoenix Island"
- STATE_643:0 "Ellice Islands"
- STATE_644:0 "Northeast Siberia"
- STATE_645:0 "Iwo Jima"
- STATE_646:0 "Saipan"
- STATE_647:0 "Palau"
- STATE_648:0 "Marcus Island"
- STATE_649:0 "Galapagos Islands"
- STATE_650:0 "Attu Island"
- STATE_651:0 "Ufa"
- STATE_652:0 "Orenburg"
- STATE_653:0 "Sverdlovsk"
- STATE_654:0 "Gorno-Altaysk"
- STATE_655:0 "North Sakhalin"
+ STATE_630:0 "Lucapa"
+ STATE_631:0 "Saurimo"
+ STATE_632:0 "Casai"
+ STATE_633:0 "Tajura"
+ STATE_634:0 "Warsangali"
+ STATE_635:0 "Ondjiva"
+ STATE_636:0 "Biu"
+ STATE_637:0 "Cuangar"
+ STATE_638:0 "Mucusso"
+ STATE_639:0 "Luena"
+ STATE_640:0 "Kasanze"
+ STATE_641:0 "Yaka"
+ STATE_642:0 "Zemio"
+ STATE_643:0 "Kaouadja"
+ STATE_644:0 "Mbombou"
+ STATE_645:0 "Bangassou"
+ STATE_646:0 "Bria"
+ STATE_647:0 "Vakaga"
+ STATE_648:0 "Bangoran"
+ STATE_649:0 "Gribingui"
+ STATE_650:0 "Sirbut"
+ STATE_651:0 "Bocaranga"
+ STATE_652:0 "Bozoum"
+ STATE_653:0 "Bouar"
+ STATE_654:0 "Berberati"
+ STATE_655:0 "West Sahara"
  STATE_656:0 "Kuwait"
  STATE_657:0 "Birobidzhan"
  STATE_658:0 "Abu Dhabi"
