Small loc fixes

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1100,404 +1100,194 @@
  ASH:0 "Ashanti"
  ASH_DEF:0 "Ashanti"
  ASH_ADJ:0 "Ashanti"
+
  DGB:0 "Dagbon"
  DGB_DEF:0 "Dagbon"
  DGB_ADJ:0 "Dagomba"
+
  GDC:0 "Gold Coast"
  GDC_DEF:0 "Gold Coast"
  GDC_ADJ:0 "Voltan"
+
  GHA:0 "Ghana"
  GHA_DEF:0 "Ghana"
  GHA_ADJ:0 "Ghanaian"
+
  GNJ:0 "Gonja"
  GNJ_DEF:0 "Gonja"
  GNJ_ADJ:0 "Gonjan"
- KTT:0 "Ketti"
- KTT_DEF:0 "Ketti"
- KTT_ADJ:0 "Ketti"
+
+ GRM:0 "Gurma"
+ GRM_DEF:0 "Gurma"
+ GRM_ADJ:0 "Gurmi"
+
  WAA:0 "Wa"
  WAA_DEF:0 "Wa"
  WAA_ADJ:0 "Wa"
+# Togo
+ KTT:0 "Ketti"
+ KTT_DEF:0 "Ketti"
+ KTT_ADJ:0 "Ketti"
+
  TOG:0 "Togo"
  TOG_DEF:0 "Togo"
  TOG_ADJ:0 "Togo-Be"
+
+# Dahomey
  BUE:0 "Bue"
  BUE_DEF:0 "Bue"
  BUE_ADJ:0 "Buen"
+
+ DAH:0 "Dahomey"
+ DAH_DEF:0 "Dahomey"
+ DAH_ADJ:0 "Dahomey"
+
  KDI:0 "Kandi"
  KDI_DEF:0 "Kandi"
  KDI_ADJ:0 "Kandien"
+
  PKU:0 "Parakou"
  PKU_DEF:0 "Parakou"
  PKU_ADJ:0 "Parakoun"
+
  NIK:0 "Nikki"
  NIK_DEF:0 "Nikki"
  NIK_ADJ:0 "Nikki"
- DAH:0 "Dahomey"
- DAH_DEF:0 "Dahomey"
- DAH_ADJ:0 "Dahomean"
+
  BEN:0 "Benin"
  BEN_DEF:0 "Benin"
  BEN_ADJ:0 "Beninese"
+
  BID:0 "Bida"
  BID_DEF:0 "Bida"
  BID_ADJ:0 "Bida"
+
  BRG:0 "Borgu"
  BRG_DEF:0 "Borgu"
  BRG_ADJ:0 "Borgu"
+
  EGB:0 "Egba"
  EGB_DEF:0 "Egba"
  EGB_ADJ:0 "Egbanese"
+
  EKT:0 "Ekiti"
  EKT_DEF:0 "Ekiti"
  EKT_ADJ:0 "Ekiti"
+
  KTU:0 "Ketu"
  KTU_DEF:0 "Ketu"
  KTU_ADJ:0 "Ketuin"
+
  IBA:0 "Ibadan"
  IBA_DEF:0 "Ibadan"
  IBA_ADJ:0 "Ibadan"
+
  IJB:0 "Ijebu"
  IJB_DEF:0 "Ijebu"
  IJB_ADJ:0 "Ijebu"
+
  IJE:0 "Ijesa"
  IJE_DEF:0 "Ijesa"
  IJE_ADJ:0 "Ijesa"
+
  OYO:0 "Oyo"
  OYO_DEF:0 "Oyo"
  OYO_ADJ:0 "Oyo"
+
+# Equatoria
  ADM:0 "Adamawa"
  ADM_DEF:0 "Adamawa"
  ADM_ADJ:0 "Adamawan"
+
  ARO:0 "Aro"
  ARO_DEF:0 "Aro"
  ATO_ADJ:0 "Aro"
+
  IGA:0 "Igala"
  IGA_DEF:0 "Igala"
  IGA_ADJ:0 "Igala"
+
  IJW:0 "Ijaw"
  IJW_DEF:0 "Ijaw"
  IJW_ADJ:0 "Ijaw"
+
+ KFK:0 "Konfuka"
+ KFK_DEF:0 "Konfuka"
+ KFK_ADJ:0 "Konfuka"
+
  NRI:0 "Nri"
  NRI_DEF:0 "Nri"
  NRI_ADJ:0 "Nri"
+# Tschad
  CHA:0 "Chad"
  CHA_DEF:0 "Chad"
  CHA_ADJ:0 "Chadian"
+
  DFR:0 "Darfur"
  DFR_DEF:0 "Darfur"
  DFR_ADJ:0 "Darfur"
+
  DFK:0 "Dar al Kuti"
  DFK_DEF:0 "Dar al Kuti"
  DFK_ADJ:0 "Dar al Kuti"
+
  DRG:0 "Dar Runga"
  DRG_DEF:0 "Dar Runga"
  DRG_ADJ:0 "Dar Runga"
+
  KNM:0 "Kanem"
  KNM_DEF:0 "Kanem"
  KNM_ADJ:0 "Kanembu"
- WDD:0 "Waddai"
- WDD_DEF:0 "Waddai"
- WDD_ADJ:0 "Waddai"
- TOB:0 "Toubou"
- TOB_DEF:0 "Toubou"
- TOB_ADJ:0 "Toubou"
+
+ TOB:0 "Tibesti"
+ TOB_DEF:0 "Tibesti"
+ TOB_ADJ:0 "Tibesti"
+
  TUG:0 "Tuareg"
  TUG_DEF:0 "Tuareg"
  TUG_ADJ:0 "Tuareg"
 
-# Chad
- TOb:0 "Tibesti"
- TOB_DEF:0 "Tibesti"
- TOB_ADJ:0 "Tibesti"
- ADM_reformism:0 "Adamawa"
- ADM_traditionalism:0 "Emirate of Adamawa"
- ADM_imperialism:0 "Adamawa"
- ADM_fundamentalism:0 "Emirate of Adamawa"
- ADM_reformism_DEF:0 "Adamawa"
- ADM_traditionalism_DEF:0 "The Adamawa Sultanate"
- ADM_imperialism_DEF:0 "Adamawa"
- ADM_fundamentalism_DEF:0 "The Adamawa Emirate"
- ADM_reformism_ADJ:0 "Adamawan"
- ADM_traditionalism_ADJ:0 "Adamawan"
- ADM_imperialism_ADJ:0 "Adamawan"
- ADM_fundamentalism_ADJ:0 "Adamawan"
- 
- ARO_reformism:0 "Aro"
- ARO_traditionalism:0 "Aro"
- ARO_imperialism:0 "Aro"
- ARO_fundamentalism:0 "Emirate of Aro"
- ARO_reformism_DEF:0 "Aro"
- ARO_traditionalism_DEF:0 "Aro"
- ARO_imperialism_DEF:0 "Aro"
- ARO_fundamentalism_DEF:0 "The Aro Emirate"
- ARO_reformism_ADJ:0 "Aro"
- ARO_traditionalism_ADJ:0 "Aro"
- ARO_imperialism_ADJ:0 "Aro"
- ARO_fundamentalism_ADJ:0 "Aro"
- 
- ASH_reformism:0 "Ashanti"
- ASH_traditionalism:0 "Ashanti"
- ASH_imperialism:0 "Ashanti"
- ASH_fundamentalism:0 "Emirate of Ashanti"
- ASH_reformism_DEF:0 "Ashanti"
- ASH_traditionalism_DEF:0 "Ashanti"
- ASH_imperialism_DEF:0 "Ashanti"
- ASH_fundamentalism_DEF:0 "The Ashanti Emirate"
- ASH_reformism_ADJ:0 "Ashanti"
- ASH_traditionalism_ADJ:0 "Ashanti"
- ASH_imperialism_ADJ:0 "Ashanti"
- ASH_fundamentalism_ADJ:0 "Ashanti"
- 
- KOY_reformism:0 "Koya Tenme"
- KOY_traditionalism:0 "Koya Tenme"
- KOY_imperialism:0 "Koya Tenme"
- KOY_fundamentalism:0 "Emirate of Koya Tenme"
- KOY_reformism_DEF:0 "Koya Tenme"
- KOY_traditionalism_DEF:0 "Koya Tenme"
- KOY_imperialism_DEF:0 "Koya Tenme"
- KOY_fundamentalism_DEF:0 "The Koya Tenme Emirate"
- KOY_reformism_ADJ:0 "Koya Tenme"
- KOY_traditionalism_ADJ:0 "Koya Tenme"
- KOY_imperialism_ADJ:0 "Koya Tenme"
- KOY_fundamentalism_ADJ:0 "Koya Tenme"
- 
- BAO_reformism:0 "Baol"
- BAO_traditionalism:0 "Baol"
- BAO_imperialism:0 "Baol"
- BAO_fundamentalism:0 "Emirate of Baol"
- BAO_reformism_DEF:0 "Baol"
- BAO_traditionalism_DEF:0 "Baol"
- BAO_imperialism_DEF:0 "Baol"
- BAO_fundamentalism_DEF:0 "The Baol Emirate"
- BAO_reformism_ADJ:0 "Baol"
- BAO_traditionalism_ADJ:0 "Baol"
- BAO_imperialism_ADJ:0 "Baol"
- BAO_fundamentalism_ADJ:0 "Baol"
- 
- GAO_reformism:0 "Gao"
- GAO_traditionalism:0 "Gao"
- GAO_imperialism:0 "Gao"
- GAO_fundamentalism:0 "Emirate of Gao"
- GAO_reformism_DEF:0 "Gao"
- GAO_traditionalism_DEF:0 "Gao"
- GAO_imperialism_DEF:0 "Gao"
- GAO_fundamentalism_DEF:0 "The Gao Emirate"
- GAO_reformism_ADJ:0 "Gao"
- GAO_traditionalism_ADJ:0 "Gao"
- GAO_imperialism_ADJ:0 "Gao"
- GAO_fundamentalism_ADJ:0 "Gao"
- 
- LIB_reformism:0 "Liberia"
- LIB_traditionalism:0 "Liberia"
- LIB_imperialism:0 "Liberia"
- LIB_fundamentalism:0 "Liberia"
- LIB_reformism_DEF:0 "Liberia"
- LIB_traditionalism_DEF:0 "Liberia"
- LIB_imperialism_DEF:0 "Liberia"
- LIB_fundamentalism_DEF:0 "Liberia"
- LIB_reformism_ADJ:0 "Liberian"
- LIB_traditionalism_ADJ:0 "Liberian"
- LIB_imperialism_ADJ:0 "Liberian"
- LIB_fundamentalism_ADJ:0 "Liberian"
- 
- GDC_reformism:0 "Gold Dutch Coast"
- GDC_traditionalism:0 "Gold Dutch Coast"
- GDC_imperialism:0 "Gold Dutch Coast"
- GDC_fundamentalism:0 "Gold Dutch Coast"
- GDC_reformism_DEF:0 "Gold Dutch Coast"
- GDC_traditionalism_DEF:0 "Gold Dutch Coast"
- GDC_imperialism_DEF:0 "Gold Dutch Coast"
- GDC_fundamentalism_DEF:0 "Gold Dutch Coast"
- GDC_reformism_ADJ:0 "Dutch"
- GDC_traditionalism_ADJ:0 "Dutch"
- GDC_imperialism_ADJ:0 "Dutch"
- GDC_fundamentalism_ADJ:0 "Dutch"
- 
- KNO_reformism:0 "Kano"
- KNO_traditionalism:0 "Kano"
- KNO_imperialism:0 "Kano"
- KNO_fundamentalism:0 "Emirate of Kano"
- KNO_reformism_DEF:0 "Kano"
- KNO_traditionalism_DEF:0 "Kano"
- KNO_imperialism_DEF:0 "Kano"
- KNO_fundamentalism_DEF:0 "The Kano Emirate"
- KNO_reformism_ADJ:0 "Kano"
- KNO_traditionalism_ADJ:0 "Kano"
- KNO_imperialism_ADJ:0 "Kano"
- KNO_fundamentalism_ADJ:0 "Kano"
- 
- NIN_reformism:0 "Ningi"
- NIN_traditionalism:0 "Ningi"
- NIN_imperialism:0 "Ningi"
- NIN_fundamentalism:0 "Emirate of Ningi"
- NIN_reformism_DEF:0 "Ningi"
- NIN_traditionalism_DEF:0 "Ningi"
- NIN_imperialism_DEF:0 "Ningi"
- NIN_fundamentalism_DEF:0 "The Ningi Emirate"
- NIN_reformism_ADJ:0 "Ningi"
- NIN_traditionalism_ADJ:0 "Ningi"
- NIN_imperialism_ADJ:0 "Ningi"
- NIN_fundamentalism_ADJ:0 "Ningi"
- 
- BID_reformism:0 "Bida"
- BID_traditionalism:0 "Bida"
- BID_imperialism:0 "Bida"
- BID_fundamentalism:0 "Emirate of Bida"
- BID_reformism_DEF:0 "Bida"
- BID_traditionalism_DEF:0 "Bida"
- BID_imperialism_DEF:0 "Bida"
- BID_fundamentalism_DEF:0 "The Bida Emirate"
- BID_reformism_ADJ:0 "Bida"
- BID_traditionalism_ADJ:0 "Bida"
- BID_imperialism_ADJ:0 "Bida"
- BID_fundamentalism_ADJ:0 "Bida"
- 
- GWI_reformism:0 "Gwari"
- GWI_traditionalism:0 "Gwari"
- GWI_imperialism:0 "Gwari"
- GWI_fundamentalism:0 "Emirate of Gwari"
- GWI_reformism_DEF:0 "Gwari"
- GWI_traditionalism_DEF:0 "Gwari"
- GWI_imperialism_DEF:0 "Gwari"
- GWI_fundamentalism_DEF:0 "The Gwari Emirate"
- GWI_reformism_ADJ:0 "Gwari"
- GWI_traditionalism_ADJ:0 "Gwari"
- GWI_imperialism_ADJ:0 "Gwari"
- GWI_fundamentalism_ADJ:0 "Gwari"
- 
- ZUU_reformism:0 "Zuru"
- ZUU_traditionalism:0 "Zuru"
- ZUU_imperialism:0 "Zuru"
- ZUU_fundamentalism:0 "Emirate of Zuru"
- ZUU_reformism_DEF:0 "Zuru"
- ZUU_traditionalism_DEF:0 "Zuru"
- ZUU_imperialism_DEF:0 "Zuru"
- ZUU_fundamentalism_DEF:0 "The Zuru Emirate"
- ZUU_reformism_ADJ:0 "Zuru"
- ZUU_traditionalism_ADJ:0 "Zuru"
- ZUU_imperialism_ADJ:0 "Zuru"
- ZUU_fundamentalism_ADJ:0 "Zuru"
- 
- KBI_reformism:0 "Kebbi"
- KBI_traditionalism:0 "Kebbi"
- KBI_imperialism:0 "Kebbi"
- KBI_fundamentalism:0 "Emirate of Kebbi"
- KBI_reformism_DEF:0 "Kebbi"
- KBI_traditionalism_DEF:0 "Kebbi"
- KBI_imperialism_DEF:0 "Kebbi"
- KBI_fundamentalism_DEF:0 "The Kebbi Emirate"
- KBI_reformism_ADJ:0 "Kebbi"
- KBI_traditionalism_ADJ:0 "Kebbi"
- KBI_imperialism_ADJ:0 "Kebbi"
- KBI_fundamentalism_ADJ:0 "Kebbi"
- 
- 
- KNM_reformism:0 "Kanem"
- KNM_traditionalism:0 "Kanem"
- KNM_imperialism:0 "Kanem"
- KNM_fundamentalism:0 "Kanem"
- KNM_reformism_DEF:0 "Kanem"
- KNM_traditionalism_DEF:0 "Kanem"
- KNM_imperialism_DEF:0 "Kanem"
- KNM_fundamentalism_DEF:0 "Kanem"
- KNM_reformism_ADJ:0 "Kanem"
- KNM_traditionalism_ADJ:0 "Kanem"
- KNM_imperialism_ADJ:0 "Kanem"
- KNM_fundamentalism_ADJ:0 "Kanem"
- 
- BAG_reformism:0 "Bagirmi"
- BAG_traditionalism:0 "Bagirmi"
- BAG_imperialism:0 "Bagirmi"
- BAG_fundamentalism:0 "Emirate of Bagirmi"
- BAG_reformism_DEF:0 "Bagirmi"
- BAG_traditionalism_DEF:0 "Bagirmi"
- BAG_imperialism_DEF:0 "Bagirmi"
- BAG_fundamentalism_DEF:0 "The Bagirmi Emirate"
- BAG_reformism_ADJ:0 "Bagirmi"
- BAG_traditionalism_ADJ:0 "Bagirmi"
- BAG_imperialism_ADJ:0 "Bagirmi"
- BAG_fundamentalism_ADJ:0 "Bagirmi"
- 
- GBR_reformism:0 "Gobir"
- GBR_traditionalism:0 "Gobir"
- GBR_imperialism:0 "Gobir"
- GBR_fundamentalism:0 "Emirate of Gobir"
- GBR_reformism_DEF:0 "Gobir"
- GBR_traditionalism_DEF:0 "Gobir"
- GBR_imperialism_DEF:0 "Gobir"
- GBR_fundamentalism_DEF:0 "The Gobir Emirate"
- GBR_reformism_ADJ:0 "Gobir"
- GBR_traditionalism_ADJ:0 "Gobir"
- GBR_imperialism_ADJ:0 "Gobir"
- GBR_fundamentalism_ADJ:0 "Gobir"
- 
- BDE_reformism:0 "Bedde"
- BDE_traditionalism:0 "Bedde"
- BDE_imperialism:0 "Bedde"
- BDE_fundamentalism:0 "Emirate of Bedde"
- BDE_reformism_DEF:0 "Bedde"
- BDE_traditionalism_DEF:0 "Bedde"
- BDE_imperialism_DEF:0 "Bedde"
- BDE_fundamentalism_DEF:0 "The Bedde Emirate"
- BDE_reformism_ADJ:0 "Bedde"
- BDE_traditionalism_ADJ:0 "Bedde"
- BDE_imperialism_ADJ:0 "Bedde"
- BDE_fundamentalism_ADJ:0 "Bedde"
- 
- GUE_reformism:0 "Goure"
- GUE_traditionalism:0 "Goure"
- GUE_imperialism:0 "Goure"
- GUE_fundamentalism:0 "Emirate of Goure"
- GUE_reformism_DEF:0 "Goure"
- GUE_traditionalism_DEF:0 "Goure"
- GUE_imperialism_DEF:0 "Goure"
- GUE_fundamentalism_DEF:0 "The Goure Emirate"
- GUE_reformism_ADJ:0 "Goure"
- GUE_traditionalism_ADJ:0 "Goure"
- GUE_imperialism_ADJ:0 "Goure"
- GUE_fundamentalism_ADJ:0 "Goure"
- 
- KRI_reformism:0 "Kerri Kerri"
- KRI_traditionalism:0 "Kerri Kerri"
- KRI_imperialism:0 "Kerri Kerri"
- KRI_fundamentalism:0 "Emirate of Kerri Kerri"
- KRI_reformism_DEF:0 "Kerri Kerri"
- KRI_traditionalism_DEF:0 "Kerri Kerri"
- KRI_imperialism_DEF:0 "Kerri Kerri"
- KRI_fundamentalism_DEF:0 "The Kerri Kerri Emirate"
- KRI_reformism_ADJ:0 "Kerri Kerri"
- KRI_traditionalism_ADJ:0 "Kerri Kerri"
- KRI_imperialism_ADJ:0 "Kerri Kerri"
- KRI_fundamentalism_ADJ:0 "Kerri Kerri"
- 
- MGH_reformism:0 "Marghi"
- MGH_traditionalism:0 "Marghi"
- MGH_imperialism:0 "Marghi"
- MGH_fundamentalism:0 "Emirate of Marghi"
- MGH_reformism_DEF:0 "Marghi"
- MGH_traditionalism_DEF:0 "Marghi"
- MGH_imperialism_DEF:0 "Marghi"
- MGH_fundamentalism_DEF:0 "The Marghi Emirate"
- MGH_reformism_ADJ:0 "Marghi"
- MGH_traditionalism_ADJ:0 "Marghi"
- MGH_imperialism_ADJ:0 "Marghi"
- MGH_fundamentalism_ADJ:0 "Marghi"
- 
- MYO_reformism:0 "Muniyo"
- MYO_traditionalism:0 "Muniyo"
- MYO_imperialism:0 "Muniyo"
- MYO_fundamentalism:0 "Emirate of Muniyo"
- MYO_reformism_DEF:0 "Muniyo"
- MYO_traditionalism_DEF:0 "Muniyo"
- MYO_imperialism_DEF:0 "Muniyo"
- MYO_fundamentalism_DEF:0 "The Muniyo Emirate"
- MYO_reformism_ADJ:0 "Muniyo"
- MYO_traditionalism_ADJ:0 "Muniyo"
- MYO_imperialism_ADJ:0 "Muniyo"
- MYO_fundamentalism_ADJ:0 "Muniyo"
- 
- 
+ WDD:0 "Waddai"
+ WDD_DEF:0 "Waddai"
+ WDD_ADJ:0 "Waddai"
+# Centralia
+ AZD:0 "Azande"
+ AZD_DEF:0 "Azande"
+ AZD_ADJ:0 "Azande"
+
+ BDA:0 "Banda"
+ BDA_DEF:0 "Banda"
+ BDA_ADJ:0 "Banda"
+
+ BGS:0 "Bangassou"
+ BGS_DEF:0 "Bangassou"
+ BGS_ADJ:0 "Banga"
+
+ CAR:0 "Central African Republic"
+ CAR_DEF:0 "the Central African Republic"
+ CAR_ADJ:0 "Central African"
+
+ GBY:0 "Gbaya"
+ GBY_DEF:0 "Gbaya"
+ GBY_ADJ:0 "Gbayan"
+
+ RAF:0 "Rafai"
+ RAF_DEF:0 "Rafai"
+ RAF_ADJ:0 "Rafai"
+
+ SRA:0 "Sara-Kaba"
+ SRA_DEF:0 "Sara-Kaba"
+ SRA_ADJ:0 "Sara-Kaba"
+
+ ZEM:0 "Zemio"
+ ZEM_DEF:0 "Zemio"
+ ZEM_ADJ:0 "Zemio"
+# Kameroon
+
+
+
+
+
  CAU_traditionalism:0 "Caucasian Imamate"
  KHI_traditionalism:0 "Khiva"
  BUK_traditionalism:0 "Bukhara"
