State Menu Changes

--- a/localisation/english/core_l_english.yml
+++ b/localisation/english/core_l_english.yml
@@ -1389,8 +1389,8 @@
  NUKE_BUTTON_NUKES:0 "We have Nuclear Bombs"
  NUKE_BUTTON_NOT_IN_PROGRESS:0 "No Nuclear Strike in Progress"
  NUKE_PROGRESS_DESC:0 "The Bomb will be dropped in $HOURS|H$ hours."
- NUKE_BUTTON_WAR_SUPPORT:1 "$COUNTRY|Y$ will lose $VALUE|H1%$ War Support"
- NUKE_BUTTON_WAR_SUPPORT_DESC:0 "War Support impact will be largest in provinces with $INFRA|H$ §HInfrastructure§! and at least $VP|H$ Victory Points"
+ NUKE_BUTTON_WAR_SUPPORT:1 "$COUNTRY|Y$ will lose $VALUE|H1%$ Unity"
+ NUKE_BUTTON_WAR_SUPPORT_DESC:0 "Unity impact will be largest in provinces with $INFRA|H$ §HInfrastructure§! and at least $VP|H$ Victory Points"
  RMB_TO_SELECT_ALL:0 "§GRight click§! to select all."
  LMB_TO_SELECT_ALL:0 "§GClick§! to select all."
  COARSE_COUNTER_KNOWN_UNITS:0 "§HKnown units:§!"
@@ -1570,7 +1570,7 @@
  CANNOT_RETREAT_WHILE_ATTACKING:0 "Cannot retreat while attacking"
  ORG_DAMAGE_MULTIPLIER:0 "Organization damage taken"
  STR_DAMAGE_MULTIPLIER:0 "Strength damage taken"
- WAR_SUPPORT_REDUCTION_ON_DAMAGE:0 "War Support reduction on damaged"
+ WAR_SUPPORT_REDUCTION_ON_DAMAGE:0 "Unity reduction on damaged"
  DEBUG_IN_MULTIPLAYER_FORBIDDEN:0 "It's forbidden to run the multiplayer sessions with the DEBUG active. Please run the game without the -debug argument."
  COMMAND_POWER_CONSUMPTION_ENTRY:0 "$NAME$: $VALUE|2+$"
  COMMAND_POWER_CONSUMPTION_ENTRY_WITH_REASON:0 "$NAME$ ($REASON$): $VALUE|2+$"
