--- a/localisation/english/country_l_english.yml
+++ b/localisation/english/country_l_english.yml
@@ -19,15 +19,15 @@
  COMMAND_POWER_TOOLTIP_AIR_MISSION_UNASSIGNED:0 "$MISSION_TYPE$ ($WING_NAME|H$)"
  NATIONAL_UNITY:0 "National Unity"
  STABILITY:0 "Stability"
- WAR_SUPPORT:0 "War Support"
+ WAR_SUPPORT:0 "Unity"
  NATIONAL_UNITY_DESC:0 "National Unity represents the willingness of the people at the top to prosecute a war to the finish. The higher this value is, the longer they will fight on before considering surrender."
  STABILITY_DESC:0 "Stability represents the people's support for the current government. High stability makes political changes easier to push through and helps the economy run smoothly."
- WAR_SUPPORT_DESC:0 "War Support represents the willingness of the people to prosecute a war to the finish. Enacting many Laws and preparing your nation for going to war effectively requires high War Support."
+ WAR_SUPPORT_DESC:0 "Unity represents the willingness of the people to prosecute a war to the finish. Enacting many Laws and preparing your nation for going to war effectively requires high Unity."
  STABILITY_WAR_FACTOR:0 "At war: $VALUE|+2%$"
  STABILITY_POPULARITY_FACTOR:0 "Ruling party popularity: $VALUE|=+2%$"
  STABILITY_EFFECT_TITLE:0 "\n§HEffects from our current Stability:§!\n"
  STABILITY_PROPAGANDA:0 "£operative_mission_icons_small|8£ Foreign Propaganda: $VALUE|+=2%$"
- WAR_SUPPORT_EFFECT_TITLE:0 "\n§HEffects from our current War Support:§!\n"
+ WAR_SUPPORT_EFFECT_TITLE:0 "\n§HEffects from our current Unity:§!\n"
  WAR_SUPPORT_AT_OFFENSIVE_WAR:0 "Offensive war: $VALUE|+=2%$"
  WAR_SUPPORT_AT_DEFENSIVE_WAR:0 "Defensive war: $VALUE|+=2%$"
  WAR_SUPPORT_TENSION:0 "World Tension: $VALUE|+=2%$"
