--- a/localisation/english/bookmarks_l_english.yml
+++ b/localisation/english/bookmarks_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- BM_HISTORY_TITLE:0 "Brief History"
- SOUDAN_1857:0 "§YEmpires of the Soudan§!"
- SOUDAN_1857_DESC:0 "§WTest§!"
- CALIPHATE_1857:0 "§YThe Indebted Caliphate"§!
- CALIPHATE_1857_DESC:0 "§W§!"
- SOUTH_1857:0 "§YRoute to Asia"§!
- SOUTH_1857_DESC:0 "§W§!"
- OTHER_GATHERING_STORM_DESC:0 ""
+ BM_HISTORY_TITLE: "Brief History"
+ SOUDAN_1857: "§YEmpires of the Soudan§!"
+ SOUDAN_1857_DESC: "§WTest§!"
+ CALIPHATE_1857: "§YThe Indebted Caliphate"§!
+ CALIPHATE_1857_DESC: "§W§!"
+ SOUTH_1857: "§YRoute to Asia"§!
+ SOUTH_1857_DESC: "§W§!"
+ OTHER_GATHERING_STORM_DESC: ""
