--- a/localisation/english/cosmetics_l_english.yml
+++ b/localisation/english/cosmetics_l_english.yml
@@ -1,33 +1,33 @@
 ﻿l_english:
- NJD_nejd_cosmetic:0 "Nejd"
- NJD_nejd_cosmetic_DEF:0 "Nejd"
- NJD_nejd_cosmetic_ADJ:0 "Nejdi"
+ NJD_nejd_cosmetic: "Nejd"
+ NJD_nejd_cosmetic_DEF: "Nejd"
+ NJD_nejd_cosmetic_ADJ: "Nejdi"
 
- GER_prussia_cosmetic:0 "Prussia"
- GER_prussia_cosmetic_DEF:0 "the Kingdom of Prussia"
- GER_prussia_cosmetic_reformism_DEF:0 "the Republic of Prussia"
- GER_prussia_cosmetic_ADJ:0 "Prussian"
+ GER_prussia_cosmetic: "Prussia"
+ GER_prussia_cosmetic_DEF: "the Kingdom of Prussia"
+ GER_prussia_cosmetic_reformism_DEF: "the Republic of Prussia"
+ GER_prussia_cosmetic_ADJ: "Prussian"
 
- GER_north_german_confederation_cosmetic:0 "Northern German Confederation"
- GER_north_german_confederation_cosmetic_DEF:0 "the Northern German Confederation"
- GER_north_german_confederation_cosmetic_ADJ:0 "North German"
+ GER_north_german_confederation_cosmetic: "Northern German Confederation"
+ GER_north_german_confederation_cosmetic_DEF: "the Northern German Confederation"
+ GER_north_german_confederation_cosmetic_ADJ: "North German"
 
- ITA_sardinia_piedmont_cosmetic:0 "Sardinia Piedmont"
- ITA_sardinia_piedmont_cosmetic_DEF:0 "the Kingdom of Sardinia Piedmont"
- ITA_sardinia_piedmont_cosmetic_ADJ:0 "Piedmontese"
+ ITA_sardinia_piedmont_cosmetic: "Sardinia Piedmont"
+ ITA_sardinia_piedmont_cosmetic_DEF: "the Kingdom of Sardinia Piedmont"
+ ITA_sardinia_piedmont_cosmetic_ADJ: "Piedmontese"
 
- AUS_austria_hungary_cosmetic:0 "Austria-Hungary"
- AUS_austria_hungary_cosmetic_DEF:0 "the Austria-Hungarian Empire"
- AUS_austria_hungary_cosmetic_ADJ:0 "Austrian"
+ AUS_austria_hungary_cosmetic: "Austria-Hungary"
+ AUS_austria_hungary_cosmetic_DEF: "the Austria-Hungarian Empire"
+ AUS_austria_hungary_cosmetic_ADJ: "Austrian"
 
- RUS_soviet_union_cosmetic:0 "Soviet Union"
- RUS_soviet_union_cosmetic_DEF:0 "the Union of Soviet Socialist Republics"
- RUS_soviet_union_cosmetic_ADJ:0 "Soviet"
+ RUS_soviet_union_cosmetic: "Soviet Union"
+ RUS_soviet_union_cosmetic_DEF: "the Union of Soviet Socialist Republics"
+ RUS_soviet_union_cosmetic_ADJ: "Soviet"
 
- USA_imperial_states_cosmetic:0 "Imperial States"
- USA_imperial_states_cosmetic_DEF:0 "the Imperial States of America"
- USA_imperial_states_cosmetic_ADJ:0 "American"
+ USA_imperial_states_cosmetic: "Imperial States"
+ USA_imperial_states_cosmetic_DEF: "the Imperial States of America"
+ USA_imperial_states_cosmetic_ADJ: "American"
 
- CSA_golden_dixie_cosmetic:0 "Golden Dixie"
- CSA_golden_dixie_cosmetic_DEF:0 "the Empire of Golden Dixie"
- CSA_golden_dixie_cosmetic_ADJ:0 "Dixie"
+ CSA_golden_dixie_cosmetic: "Golden Dixie"
+ CSA_golden_dixie_cosmetic_DEF: "the Empire of Golden Dixie"
+ CSA_golden_dixie_cosmetic_ADJ: "Dixie"
