--- a/localisation/english/autonomy_l_english.yml
+++ b/localisation/english/autonomy_l_english.yml
@@ -1,73 +1,73 @@
 ﻿l_english:
-  autonomy_annex:0 "Annexed"
-  autonomy_free:0 "Free"
-  add_autonomy_score_on_start_loc:0 "Autonomy"
+  autonomy_annex: "Annexed"
+  autonomy_free: "Free"
+  add_autonomy_score_on_start_loc: "Autonomy"
  # Ottoman
-  autonomy_ottoman_eyalet:0 "Eyalet"
-  autonomy_ottoman_khedive:0 "Khedive"
+  autonomy_ottoman_eyalet: "Eyalet"
+  autonomy_ottoman_khedive: "Khedive"
  # Empire
-  afr_empire_politics_subject_autonomy_level_none:0 "Subject"
-  autonomy_afr_empire_level_1:0 "Integrated Vassal"
-  autonomy_afr_empire_level_2:0 "Autonomous Vassal"
-  autonomy_afr_empire_level_3:0 "Regional Authority"
-  autonomy_afr_empire_level_4:0 "Tributary"
+  afr_empire_politics_subject_autonomy_level_none: "Subject"
+  autonomy_afr_empire_level_1: "Integrated Vassal"
+  autonomy_afr_empire_level_2: "Autonomous Vassal"
+  autonomy_afr_empire_level_3: "Regional Authority"
+  autonomy_afr_empire_level_4: "Tributary"
  # Colonial
-  autonomy_afr_dominion:0 "Crown Colony"
-  autonomy_afr_colony:0 "Colony"
-  autonomy_afr_colonial_company:0 "Colonial Company"
-  autonomy_afr_protectorate:0 "Protectorate"
+  autonomy_afr_dominion: "Crown Colony"
+  autonomy_afr_colony: "Colony"
+  autonomy_afr_colonial_company: "Colonial Company"
+  autonomy_afr_protectorate: "Protectorate"
  # Modern
-  autonomy_modern_supervised_state:0 "Supervised State"
-  autonomy_modern_puppet:0 "Puppet"
-  autonomy_modern_integrated_puppet:0 "Integrated Puppet"
+  autonomy_modern_supervised_state: "Supervised State"
+  autonomy_modern_puppet: "Puppet"
+  autonomy_modern_integrated_puppet: "Integrated Puppet"
  # Interface
- AUTONOMY_CAN_TAKE_DESC:1 "$OWNER|UH$ can become a $NEXTLEVEL|H$"
- AUTONOMY_CANT_TAKE_DESC:1 "$OWNER|UH$ can not become a $NEXTLEVEL|H$ yet"
- AUTONOMY_CAN_LOSE_DESC:1 "$OWNER|UH$ can be reduced to a $PREVLEVEL|H$"
- AUTONOMY_CANT_LOSE_DESC:1 "$OWNER|UH$ can not be reduced to a $PREVLEVEL|H$ yet"
- AUTONOMY_CHANGE_TO_DESC:1 "$OWNER|UH$ will become a $LEVEL|H$"
- AUTONOMY_MOVING_DESC:1 "§GChange autonomy level to a $LEVEL|H$§!"
- AUTONOMY_CURR_DESC:0 "Currently $COUNTRY|H$ is a $LEVEL|H$"
- AUTONOMY_PROGRESS_DESC:1 "$OWNER|UH$ has £autonomy_texticon $CURRENT|H0$/$TOTAL|H0$ points until being able to become $NEXTLEVEL|H$"
- AUTONOMY_PROGRESS_PREV_DESC:1 "$OWNER|UH$ has $CURRENT|H0$ points too many to be reduced to $PREVLEVEL|H$"
- AUTONOMY_RELATION_DESC:1 "$SUBJECT|UH$ is a $LEVEL|H$ of $MASTER|H$"
- AUTONOMY_RELATION_DESC2:1 "$SUBJECT|UH$ is a $LEVEL|H$ of a foreign power"
- AUTONOMY_COUNTRY_EFFECT:0 "Country"
- AUTONOMY_MASTER_COUNTRY_EFFECT:0 "Master"
- SHOW_SUBJECTS_DESC:0 "Open subjects view"
- SHOW_SUBJECTS_DISABLED_DESC:0 "§RWe don't have any subjects to display§!"
- MANAGE_SUBJECTS_HEADER:0 "Subjects"
- CONTINUOUS_AUTONOMY_EFFECT:0 "$REASON$: £autonomy_texticon $VAL|+=2$"
- EVENT_AUTONOMY_EFFECT:0 "$REASON$: £autonomy_texticon $VAL|+=2$"
- LL_TO_OVERLORD_FREEDOM_EFFECT:0 "Subject lend leasing to overlord"
- LL_TO_PUPPET_FREEDOM_EFFECT:0 "Overlord lend leasing to subject"
- MONTHLY_LL_FREEDOM_TO_PUPPET:0 "$FLAG$ $VALUE|-2$"
- MONTHLY_LL_FREEDOM_TO_MASTER:0 "$VALUE|+2$"
- MONTHLY_LL_FREEDOM_VALUE_DESC:0 "Monthly impact on autonomy in case of full delivery"
- MONTHLY_LL_FREEDOM_DESC:0 "Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|+=2$ "
- MONTHLY_REQUEST_LL_TO_MASTER:0 "§RRequesting lend lease from puppet can give them more autonomy§!"
- MONTHLY_REQUEST_LL_TO_PUPPET:0 "§RRequesting lend lease from master might lose autonomy§!"
- EXPORT_FREEDOM_EFFECT:0 "Subject exporting to overlord"
- WAR_SCORE_FREEDOM_EFFECT:0 "Subject contributed war score"
- EFFECT_FREEDOM_EFFECT:0 "Subject received"
- ACTIVE_ATTACHES_EFFECT:0 "Active Attaches"
- MASTER_SURRENDER_FREEDOM_EFFECT:0 "Master capitulated"
- MISSING_AUTONOMY_SCORE:0 "Need £autonomy_texticon $VAL|2Y$ more autonomy"
- TOO_MUCH_AUTONOMY_SCORE:0 "Has $VAL|2Y$ too much autonomy"
- AUTONOMY_CHANGE_COST:1 "Cost (£pol_power ): $VALUE$"
- AUTONOMY_FREEDOM_PROMOTE_COST:0 "Need £autonomy_texticon $SCORE|H0$ more to promote to that level"
- AUTONOMY_FREEDOM_DEMOTE_COST:0 "Need £autonomy_texticon $SCORE|H0$ to demote to that level"
- CONTINUOUS_AUTONOMY_EFFECTS:0 "§HContinuous effects on autonomy§!"
- EVENT_AUTONOMY_EFFECTS:1 "§HEffects on autonomy§!"
- ADD_AUTONOMY_SCORE_DESC:0 "Add £autonomy_texticon $VALUE|H2$"
- ADD_AUTONOMY_SCORE_DETAILED_DESC:0 "Add £autonomy_texticon $VALUE|H2$ to the $COUNTRY|H$"
- COLONIAL_FORCES_GENERAL_DESCRIPTION:2 "§GClick to view templates of subjects and Governments in Exile§!\n\nDivisions created with colonial templates can include more manpower from the colony if the colony's autonomy is lowered."
- COLONIAL_FORCES_NO_SUBJECTS:2 "§RWe have no subjects or Governments in Exile we could recruit templates from§!"
- FOREIGN_TEMPLATE_DESC:0 "This is a $COUNTRY|H$ template, which is our subject. We can duplicate template and create colonial forces on its base. Colonial template will use its parent troops, depending on autonomy level."
- COLONIAL_TEMPLATE_DESC:0 "This is $COUNTRY|H$ colonial template. Colonial template will use its parent troops, depending on autonomy level."
- CONSTRUCTION_MASTER_BUILDING_LEVELS:1 "$MASTER|UH$ is currently building $LVL|H$ levels of $BUILDING|H$ for us."
- CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS:0 "We are allowed to reduce this construciton level only by $LVL|R$."
- CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE:0 "§RWe are not allowed to reduce the level or cancel this construction.§!"
- CONSTRUCTION_INFO_MASTER:0 "This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs."
- CONSTRUCTION_INFO_SUBJECT:0 "This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours."
+ AUTONOMY_CAN_TAKE_DESC: "$OWNER|UH$ can become a $NEXTLEVEL|H$"
+ AUTONOMY_CANT_TAKE_DESC: "$OWNER|UH$ can not become a $NEXTLEVEL|H$ yet"
+ AUTONOMY_CAN_LOSE_DESC: "$OWNER|UH$ can be reduced to a $PREVLEVEL|H$"
+ AUTONOMY_CANT_LOSE_DESC: "$OWNER|UH$ can not be reduced to a $PREVLEVEL|H$ yet"
+ AUTONOMY_CHANGE_TO_DESC: "$OWNER|UH$ will become a $LEVEL|H$"
+ AUTONOMY_MOVING_DESC: "§GChange autonomy level to a $LEVEL|H$§!"
+ AUTONOMY_CURR_DESC: "Currently $COUNTRY|H$ is a $LEVEL|H$"
+ AUTONOMY_PROGRESS_DESC: "$OWNER|UH$ has £autonomy_texticon $CURRENT|H0$/$TOTAL|H0$ points until being able to become $NEXTLEVEL|H$"
+ AUTONOMY_PROGRESS_PREV_DESC: "$OWNER|UH$ has $CURRENT|H0$ points too many to be reduced to $PREVLEVEL|H$"
+ AUTONOMY_RELATION_DESC: "$SUBJECT|UH$ is a $LEVEL|H$ of $MASTER|H$"
+ AUTONOMY_RELATION_DESC2: "$SUBJECT|UH$ is a $LEVEL|H$ of a foreign power"
+ AUTONOMY_COUNTRY_EFFECT: "Country"
+ AUTONOMY_MASTER_COUNTRY_EFFECT: "Master"
+ SHOW_SUBJECTS_DESC: "Open subjects view"
+ SHOW_SUBJECTS_DISABLED_DESC: "§RWe don't have any subjects to display§!"
+ MANAGE_SUBJECTS_HEADER: "Subjects"
+ CONTINUOUS_AUTONOMY_EFFECT: "$REASON$: £autonomy_texticon $VAL|+=2$"
+ EVENT_AUTONOMY_EFFECT: "$REASON$: £autonomy_texticon $VAL|+=2$"
+ LL_TO_OVERLORD_FREEDOM_EFFECT: "Subject lend leasing to overlord"
+ LL_TO_PUPPET_FREEDOM_EFFECT: "Overlord lend leasing to subject"
+ MONTHLY_LL_FREEDOM_TO_PUPPET: "$FLAG$ $VALUE|-2$"
+ MONTHLY_LL_FREEDOM_TO_MASTER: "$VALUE|+2$"
+ MONTHLY_LL_FREEDOM_VALUE_DESC: "Monthly impact on autonomy in case of full delivery"
+ MONTHLY_LL_FREEDOM_DESC: "Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|+=2$ "
+ MONTHLY_REQUEST_LL_TO_MASTER: "§RRequesting lend lease from puppet can give them more autonomy§!"
+ MONTHLY_REQUEST_LL_TO_PUPPET: "§RRequesting lend lease from master might lose autonomy§!"
+ EXPORT_FREEDOM_EFFECT: "Subject exporting to overlord"
+ WAR_SCORE_FREEDOM_EFFECT: "Subject contributed war score"
+ EFFECT_FREEDOM_EFFECT: "Subject received"
+ ACTIVE_ATTACHES_EFFECT: "Active Attaches"
+ MASTER_SURRENDER_FREEDOM_EFFECT: "Master capitulated"
+ MISSING_AUTONOMY_SCORE: "Need £autonomy_texticon $VAL|2Y$ more autonomy"
+ TOO_MUCH_AUTONOMY_SCORE: "Has $VAL|2Y$ too much autonomy"
+ AUTONOMY_CHANGE_COST: "Cost (£pol_power ): $VALUE$"
+ AUTONOMY_FREEDOM_PROMOTE_COST: "Need £autonomy_texticon $SCORE|H0$ more to promote to that level"
+ AUTONOMY_FREEDOM_DEMOTE_COST: "Need £autonomy_texticon $SCORE|H0$ to demote to that level"
+ CONTINUOUS_AUTONOMY_EFFECTS: "§HContinuous effects on autonomy§!"
+ EVENT_AUTONOMY_EFFECTS: "§HEffects on autonomy§!"
+ ADD_AUTONOMY_SCORE_DESC: "Add £autonomy_texticon $VALUE|H2$"
+ ADD_AUTONOMY_SCORE_DETAILED_DESC: "Add £autonomy_texticon $VALUE|H2$ to the $COUNTRY|H$"
+ COLONIAL_FORCES_GENERAL_DESCRIPTION: "§GClick to view templates of subjects and Governments in Exile§!\n\nDivisions created with colonial templates can include more manpower from the colony if the colony's autonomy is lowered."
+ COLONIAL_FORCES_NO_SUBJECTS: "§RWe have no subjects or Governments in Exile we could recruit templates from§!"
+ FOREIGN_TEMPLATE_DESC: "This is a $COUNTRY|H$ template, which is our subject. We can duplicate template and create colonial forces on its base. Colonial template will use its parent troops, depending on autonomy level."
+ COLONIAL_TEMPLATE_DESC: "This is $COUNTRY|H$ colonial template. Colonial template will use its parent troops, depending on autonomy level."
+ CONSTRUCTION_MASTER_BUILDING_LEVELS: "$MASTER|UH$ is currently building $LVL|H$ levels of $BUILDING|H$ for us."
+ CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS: "We are allowed to reduce this construciton level only by $LVL|R$."
+ CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE: "§RWe are not allowed to reduce the level or cancel this construction.§!"
+ CONSTRUCTION_INFO_MASTER: "This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs."
+ CONSTRUCTION_INFO_SUBJECT: "This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours."
 
